DEV: add reset/forget password endpoints
