# Backend/Api/IdentityEndpoints.cs
@@ -203,6 +203,64 @@ public static class IdentityEndpoints
                 $"Please confirm your account by <a href='{HtmlEncoder.Default.Encode(confirmEmailUrl)}'>clicking here</a>."
             );
         }
+        routeGroup.MapPost("/forgotPassword", async Task<Results<Ok, ValidationProblem>>
+            ([FromBody] ForgotPasswordRequest resetRequest, [FromServices] IServiceProvider sp) =>
+        {
+            var mailSender = sp.GetRequiredService<IEmailSender>();
+            var userManager = sp.GetRequiredService<UserManager<IdentityUser>>();
+            var user = await userManager.FindByEmailAsync(resetRequest.Email);
+
+            if (user is not null && await userManager.IsEmailConfirmedAsync(user))
+            {
+                var code = await userManager.GeneratePasswordResetTokenAsync(user);
+                code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
+                var resetPasswordUrlBase = ""; // TODO: After making frontend, return correct url
+                var resetUrl = $"{resetPasswordUrlBase}?Email={user.Email}&ResetCode={HtmlEncoder.Default.Encode(code)}";
+                var email = user.Email ?? throw new NotSupportedException("Users must have an email.");
+                await mailSender.SendEmailAsync(
+                    user.Email, 
+                    "Password Reset Mail", 
+                    $"Please reset your password by <a href='{HtmlEncoder.Default.Encode(resetUrl)}'>clicking here</a>."
+                );
+            }
+            // Don't reveal that the user does not exist or is not confirmed, so don't return a 200 if we would have
+            // returned a 400 for an invalid code given a valid user email.
+            return TypedResults.Ok();
+        });
+
+        routeGroup.MapPost("/resetPassword", async Task<Results<Ok, ValidationProblem>>
+            ([FromBody] ResetPasswordRequest resetRequest, [FromServices] IServiceProvider sp) =>
+        {
+            var userManager = sp.GetRequiredService<UserManager<IdentityUser>>();
+
+            var user = await userManager.FindByEmailAsync(resetRequest.Email);
+
+            if (user is null || !await userManager.IsEmailConfirmedAsync(user))
+            {
+                // Don't reveal that the user does not exist or is not confirmed, so don't return a 200 if we would have
+                // returned a 400 for an invalid code given a valid user email.
+                return CreateValidationProblem(IdentityResult.Failed(userManager.ErrorDescriber.InvalidToken()));
+            }
+
+            IdentityResult result;
+            try
+            {
+                var code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(resetRequest.ResetCode));
+                result = await userManager.ResetPasswordAsync(user, code, resetRequest.NewPassword);
+            }
+            catch (FormatException)
+            {
+                result = IdentityResult.Failed(userManager.ErrorDescriber.InvalidToken());
+            }
+
+            if (!result.Succeeded)
+            {
+                return CreateValidationProblem(result);
+            }
+
+            return TypedResults.Ok();
+        });
+
         var accountGroup = routeGroup.MapGroup("/manage").RequireAuthorization();
         accountGroup.MapGet("/info", async Task<Results<Ok<InfoResponse>, ValidationProblem, NotFound>>
             (ClaimsPrincipal claimsPrincipal, [FromServices] IServiceProvider sp) =>
